фильтрация и пагинация для ролей и пользователей